# perl-Workflow-Inotify

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  NEWS.md  README.md  TBD  aclocal.m4  bootstrap  configure  configure.ac  directories.inc  perl-Workflow-Inotify.spec.in
config/: Makefile.am  Makefile.in  inotify.cfg.in  inotify.service
cpan/: Makefile.am  buildspec.yml  requires
src/: Makefile.in
src/main/: Makefile.in
src/main/bash/: Makefile.in
src/main/perl/: Makefile.am  Makefile.in
src/main/perl/lib/: Makefile.am  Makefile.in
src/main/perl/lib/Workflow/: Inotify.pm.in
src/main/perl/lib/Workflow/Inotify/: Handler.pm.in
